@@ -1,0 +1,22 @@
+<html>
+  <body>
+
+    <h1>This page leads to status setting</h1>
+
+    <form action="http://localhost/set_status.html" method="get" name="theform">
+
+      <a href="http://localhost/set_status.html?status=403">403</a>
+
+      <input type="text" name="status" id="status"
+               value="Some Text" />
+
+      <input type="image" name="image-value" id="image-value"
+               src="zope3logo.gif" />
+
+      <input type="submit" name="submit-value" id="submit-value"
+               value="Submit This" />
+
+    </form>
+
+  </body>
+</html>
